# zenfoxy

./: pyproject.toml  readme.md
src/: analyzer.py  main.py
tests/: test_analyzer.py
