[tool.poetry]
name = "zenfoxy"
version = "0.1.0"
description = ""
authors = ["mariogmarq <mariogarciamarq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
